ingress/rules/standalone/plex/ingress-plex.yaml
apiVersion: v1
kind: Service
metadata:
  name: plex-external
  namespace: default
spec:
  ports:
  - protocol: TCP
    port: 32400
    targetPort: 32400

---

apiVersion: v1
kind: Endpoints
metadata:
  name: plex-external
  namespace: default
subsets:
  - addresses:
      - ip: 10.0.1.2
    ports:
      - port: 32400

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-plex
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP" # Change to HTTPS if required
spec:
  ingressClassName: nginx
  rules:
  - host: plex.domain.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: plex-external
            port:
              number: 32400
  tls:
  - hosts:
    - plex.domain.com
    secretName: plex-tls
